--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
     - Home: index.md
     - Installation: installation.md
     - Input files structure: input.md
+    - Trial packages: trial.md
     - Usage: usage.md
     - Contributing: contributing.md
     - Changelog: changelog.md
