--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,12 +77,13 @@ nav:
     - Input files structure: input.md
     - Trial packages: trial.md
     - Usage: usage.md
-    - Contributing: contributing.md
+    - Output: output.md
     - Changelog: changelog.md
+    - Contributing: contributing.md
     - Report Issues: https://github.com/damiantondas/multidefusion/issues
-    - Authors: authors.md
     - API Reference:
           - fusion module: fusion.md
           - datainterface module: datainterface.md
           - results module: results.md
           - integration module: integration.md
+    - Authors: authors.md
